--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom
+testOneRegi
+testOneRegi/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +131,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/launch.json
